[gd_scene load_steps=4 format=3 uid="uid://dvw4lc4csqixq"]

[ext_resource type="Script" path="res://Scenes/Scripts/world.gd" id="1_y2nar"]

[sub_resource type="BoxShape3D" id="BoxShape3D_u3l08"]
size = Vector3(20, 1, 20)

[sub_resource type="BoxMesh" id="BoxMesh_tm2ry"]
size = Vector3(20, 1, 20)

[node name="World" type="Node"]
script = ExtResource("1_y2nar")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_u3l08")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_tm2ry")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 6.5, 0)
shadow_enabled = true

[node name="ExitMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ExitMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.0
offset_top = -100.0
offset_right = 285.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="ExitMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ReturnToGameButton" type="Button" parent="ExitMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "Вернуться в игру"

[node name="ExitFormGameButton" type="Button" parent="ExitMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "Выйти из игры"

[node name="AcceptMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="AcceptMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="AcceptMenu/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AcceptMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 65
text = "Вы хотите выйти из игры?"

[node name="HBoxContainer" type="HBoxContainer" parent="AcceptMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="AcceptButton" type="Button" parent="AcceptMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "ДА"

[node name="DeclineButton" type="Button" parent="AcceptMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "НЕТ"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="ExitMenu/MarginContainer/VBoxContainer/ReturnToGameButton" to="." method="_on_return_to_game_button_pressed"]
[connection signal="pressed" from="ExitMenu/MarginContainer/VBoxContainer/ExitFormGameButton" to="." method="_on_exit_form_game_button_pressed"]
[connection signal="pressed" from="AcceptMenu/MarginContainer/VBoxContainer/HBoxContainer/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="AcceptMenu/MarginContainer/VBoxContainer/HBoxContainer/DeclineButton" to="." method="_on_decline_button_pressed"]
